src/objects/StudentCompletionCourse__c.object
<CustomObject>
    <description>This stores the information for the results of the courses.</description>
    <fields>
        <fullName>BannerActivityDate__c</fullName>
        <description>Banner activity date</description>
        <label>Banner Activity Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <description>True if the course was passed.  False if the course was failed for that term.</description>
        <label>Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>InPreviousProgram__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Value that indicates whether the course was completed in a previous program</description>
        <label>In Previous Program</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsTestData__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field to indicate if the record is a test record</description>
        <label>Is Test Data</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NEW_Id__c</fullName>
        <description>A temporary holding field for the new SF ID of this record (person account conversion).</description>
        <externalId>true</externalId>
        <label>NEW_Id</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>OLD_Id__c</fullName>
        <description>A temporary holding field for the SF ID of this record, to be used for data migration from a person account org to a non-person account org. Declared as External Id for Upsert operations via the SOAP, REST, or BULK APIs.</description>
        <externalId>true</externalId>
        <label>OLD_Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PIDM__c</fullName>
        <description>The internal identifier of the student.</description>
        <label>PIDM</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StatusDate__c</fullName>
        <description>The date when this occurred</description>
        <label>Status Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Student__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The student whom this completion task belongs to.</description>
        <label>Student</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Student Completion Courses</relationshipLabel>
        <relationshipName>StudentCompletionCourses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TermCode__c</fullName>
        <description>The term code when this course was completed (or failed)</description>
        <label>Term Code</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UniqueId__c</fullName>
        <description>The unique ID for this record. Externally set.</description>
        <externalId>true</externalId>
        <label>UniqueId</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WGUCourseVersion__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The WGUCourse Version for this completed course</description>
        <label>WGU Course Version</label>
        <referenceTo>WGUCourseVersion__c</referenceTo>
        <relationshipLabel>Student Completion Courses</relationshipLabel>
        <relationshipName>StudentCompletionCourses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>WGUCourse__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>link to wgucourse</description>
        <label>WGU Course</label>
        <referenceTo>WGUCourse__c</referenceTo>
        <relationshipLabel>Student Completion Courses</relationshipLabel>
        <relationshipName>Student_Completion_Courses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>status__c</fullName>
        <description>Status of the course</description>
        <label>status</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <label>Student Completion Course</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Student__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>equals</operation>
            <value>TBP1</value>
        </filters>
        <label>All</label>
    </listViews>
    <nameField>
        <label>PAMS Course ID</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Student Completion Courses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>